--- a/TestChat/View/NewMessageCell.xib
+++ b/TestChat/View/NewMessageCell.xib
@@ -11,46 +11,76 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="119" id="KGk-i7-Jjw" customClass="NewMessageCell" customModule="TestChat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="119"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="115" id="KGk-i7-Jjw" customClass="NewMessageCell" customModule="TestChat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="408" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="393" height="119"/>
+                <rect key="frame" x="0.0" y="0.0" width="408" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2z2-NY-mEU">
-                        <rect key="frame" x="10" y="10" width="373" height="99"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3vJ-nX-jo2">
+                        <rect key="frame" x="10" y="1" width="388" height="113"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bC-F1-guK">
-                                <rect key="frame" x="10" y="10" width="353" height="79"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fnr-SG-Xbo">
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="HHn-SY-R49"/>
+                                    <constraint firstAttribute="width" constant="30" id="yFo-8n-Vu6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2z2-NY-mEU">
+                                <rect key="frame" x="40" y="0.0" width="308" height="93"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bC-F1-guK">
+                                        <rect key="frame" x="10" y="10" width="288" height="73"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                <constraints>
+                                    <constraint firstItem="9bC-F1-guK" firstAttribute="top" secondItem="2z2-NY-mEU" secondAttribute="top" constant="10" id="Wyb-vt-5lS"/>
+                                    <constraint firstAttribute="bottom" secondItem="9bC-F1-guK" secondAttribute="bottom" constant="10" id="aZX-uV-6Jw"/>
+                                    <constraint firstItem="9bC-F1-guK" firstAttribute="leading" secondItem="2z2-NY-mEU" secondAttribute="leading" constant="10" id="dfl-oe-YHA"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="gfL-xg-zhB"/>
+                                    <constraint firstAttribute="trailing" secondItem="9bC-F1-guK" secondAttribute="trailing" constant="10" id="zfx-uF-rLl"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Me" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWc-5A-YSn">
+                                <rect key="frame" x="358" y="0.0" width="30" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="88Z-1D-dlA"/>
+                                    <constraint firstAttribute="width" constant="30" id="MJS-EI-lcN"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
                         <constraints>
-                            <constraint firstItem="9bC-F1-guK" firstAttribute="top" secondItem="2z2-NY-mEU" secondAttribute="top" constant="10" id="Wyb-vt-5lS"/>
-                            <constraint firstAttribute="bottom" secondItem="9bC-F1-guK" secondAttribute="bottom" constant="10" id="aZX-uV-6Jw"/>
-                            <constraint firstItem="9bC-F1-guK" firstAttribute="leading" secondItem="2z2-NY-mEU" secondAttribute="leading" constant="10" id="dfl-oe-YHA"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="gfL-xg-zhB"/>
-                            <constraint firstAttribute="trailing" secondItem="9bC-F1-guK" secondAttribute="trailing" constant="10" id="rkT-MY-VSi"/>
+                            <constraint firstAttribute="bottom" secondItem="2z2-NY-mEU" secondAttribute="bottom" constant="20" symbolic="YES" id="Phr-42-azI"/>
                         </constraints>
-                    </view>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="2z2-NY-mEU" secondAttribute="bottom" constant="10" id="3ct-KH-XJt"/>
-                    <constraint firstItem="2z2-NY-mEU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Er5-iE-RoS"/>
-                    <constraint firstItem="2z2-NY-mEU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="N15-NY-kjI"/>
-                    <constraint firstAttribute="trailing" secondItem="2z2-NY-mEU" secondAttribute="trailing" constant="10" id="eEp-E2-pZx"/>
+                    <constraint firstItem="3vJ-nX-jo2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="de8-cL-pVd"/>
+                    <constraint firstAttribute="bottom" secondItem="3vJ-nX-jo2" secondAttribute="bottom" constant="1" id="djr-aB-CLt"/>
+                    <constraint firstAttribute="trailing" secondItem="3vJ-nX-jo2" secondAttribute="trailing" constant="10" id="rVY-Vn-M6A"/>
+                    <constraint firstItem="3vJ-nX-jo2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="zb0-MF-TE0"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="meLabel" destination="sWc-5A-YSn" id="qL8-XU-kF9"/>
                 <outlet property="messageBubble" destination="2z2-NY-mEU" id="v9l-HY-c9y"/>
                 <outlet property="textMessageLabel" destination="9bC-F1-guK" id="3nh-S5-J3n"/>
+                <outlet property="youLabel" destination="Fnr-SG-Xbo" id="7hX-V0-5lz"/>
             </connections>
-            <point key="canvasLocation" x="190.57971014492756" y="45.870535714285715"/>
+            <point key="canvasLocation" x="201.44927536231884" y="47.209821428571423"/>
         </tableViewCell>
     </objects>
     <resources>
